# Semi-Supervised-Learning

./: README.md  pyproject.toml
Lab1/: Semi_Supervised_lab1.ipynb
Lab2/: Semi_Supervised_lab2.ipynb
Lab3/: Semi_Supervised_lab3.ipynb
