[tool.poetry]
name = "semi-supervised-learning"
version = "1.0"
description = ""
authors = ["kyrbl"]
readme = "README.md"
packages = [{include = "semi_supervised_learning"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
matplotlib = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
